[gd_scene load_steps=9 format=2]

[ext_resource path="res://components/ladder/ladder.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/font/RubikItalicSmall.tres" type="DynamicFont" id=3]
[ext_resource path="res://components/button_base/button_base.tscn" type="PackedScene" id=12]

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0, 0, 0, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.0705882, 0.0862745, 0.0941176, 1 )

[sub_resource type="StyleBoxEmpty" id=21]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0

[sub_resource type="Animation" id=17]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ Vector2( 0, 700 ), Vector2( 0, 0 ) ]
}

[node name="Ladder" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 700.0
margin_bottom = 700.0
mouse_filter = 0
input_pass_on_modal_close_click = false
theme = ExtResource( 2 )
alignment = 1
script = ExtResource( 1 )

[node name="Panel" type="PanelContainer" parent="."]
margin_right = 700.0
margin_bottom = 700.0
rect_min_size = Vector2( 700, 700 )
mouse_filter = 1
custom_styles/panel = SubResource( 18 )

[node name="Container" type="VBoxContainer" parent="Panel"]
margin_right = 700.0
margin_bottom = 700.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="List" type="PanelContainer" parent="Panel/Container"]
margin_right = 700.0
margin_bottom = 534.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 19 )

[node name="Status" type="Label" parent="Panel/Container/List"]
margin_top = 252.0
margin_right = 700.0
margin_bottom = 281.0
text = "T_LOADING"
align = 1

[node name="Scroll" type="ScrollContainer" parent="Panel/Container/List"]
margin_right = 700.0
margin_bottom = 534.0
follow_focus = true

[node name="Margin" type="MarginContainer" parent="Panel/Container/List/Scroll"]
margin_right = 700.0
margin_bottom = 534.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Content" type="VBoxContainer" parent="Panel/Container/List/Scroll/Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 690.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Bottom" type="PanelContainer" parent="Panel/Container"]
margin_top = 534.0
margin_right = 700.0
margin_bottom = 700.0
rect_min_size = Vector2( 0, 80 )
custom_styles/panel = SubResource( 21 )

[node name="V" type="VBoxContainer" parent="Panel/Container/Bottom"]
margin_left = 8.0
margin_top = 8.0
margin_right = 692.0
margin_bottom = 158.0
custom_constants/separation = 8

[node name="Progress" type="ProgressBar" parent="Panel/Container/Bottom/V"]
modulate = Color( 0.47451, 0.596078, 0.933333, 1 )
margin_right = 684.0
margin_bottom = 20.0
rect_min_size = Vector2( 300, 20 )
max_value = 1.0
value = 0.5
percent_visible = false

[node name="TimeLeft" type="Label" parent="Panel/Container/Bottom/V/Progress"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.5
margin_top = -12.0
margin_right = 103.5
margin_bottom = 12.0
custom_fonts/font = ExtResource( 3 )
text = "04:03:01:23"
align = 1

[node name="Meta" type="VBoxContainer" parent="Panel/Container/Bottom/V"]
margin_top = 28.0
margin_right = 684.0
margin_bottom = 82.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="H" type="HBoxContainer" parent="Panel/Container/Bottom/V/Meta"]
margin_right = 684.0
margin_bottom = 30.0
alignment = 1

[node name="Meta" type="Label" parent="Panel/Container/Bottom/V/Meta/H"]
modulate = Color( 1, 0.0862745, 0.564706, 1 )
margin_left = 186.0
margin_right = 388.0
margin_bottom = 29.0
text = "T_META_BONUS"
align = 1
uppercase = true

[node name="Name" type="Label" parent="Panel/Container/Bottom/V/Meta/H"]
modulate = Color( 0.952941, 0.752941, 0.368627, 1 )
margin_left = 392.0
margin_right = 497.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "RANDOM"
align = 1
uppercase = true

[node name="Description" type="Label" parent="Panel/Container/Bottom/V/Meta"]
modulate = Color( 0.47451, 0.596078, 0.933333, 1 )
margin_top = 30.0
margin_right = 684.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 3 )
text = "For every push skill used"
align = 1
autowrap = true

[node name="Warning" type="Label" parent="Panel/Container/Bottom/V"]
visible = false
modulate = Color( 1, 0.0862745, 0.564706, 1 )
margin_top = 90.0
margin_right = 684.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 3 )
text = "T_LADDER_DONE"
align = 1
autowrap = true

[node name="Container" type="HBoxContainer" parent="Panel/Container/Bottom/V"]
margin_top = 90.0
margin_right = 684.0
margin_bottom = 150.0
custom_constants/separation = 10

[node name="Back" parent="Panel/Container/Bottom/V/Container" instance=ExtResource( 12 )]
margin_right = 337.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "T_BACK"

[node name="Play" parent="Panel/Container/Bottom/V/Container" instance=ExtResource( 12 )]
margin_left = 347.0
margin_right = 684.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "T_PLAY"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Enter = SubResource( 17 )

[node name="HTTP" type="HTTPRequest" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="button_down" from="Panel/Container/Bottom/V/Container/Back" to="." method="hide"]
[connection signal="button_down" from="Panel/Container/Bottom/V/Container/Play" to="." method="play"]
[connection signal="request_completed" from="HTTP" to="." method="_on_HTTP_request_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
